--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13.1\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "import pandas as pd\n",
@@ -23,7 +31,9 @@
     "device_lib.list_local_devices()\n",
     "import pickle \n",
     "from multiprocessing import Pool\n",
-    "import os"
+    "import os\n",
+    "import time\n",
+    "import datetime"
    ]
   },
   {
@@ -200,11 +210,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'201903291139'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "now = datetime.datetime.now().strftime(\"%Y%m%d%H%M\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_path = \"training/cp-{epoch:04d}.ckpt\"\n",
+    "checkpoint_path = \"training\"+now+\"/cp-{epoch:04d}.ckpt\"\n",
     "checkpoint_dir = os.path.dirname(checkpoint_path)\n",
     "cp_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    checkpoint_path, verbose=1, save_weights_only=True,\n",
