group low frequency cateogorical variables

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -33,12 +33,16 @@
     "from multiprocessing import Pool\n",
     "import os\n",
     "import time\n",
-    "import datetime"
+    "import datetime\n",
+    "import matplotlib as plt\n",
+    "import seaborn as sns\n",
+    "from collections import Counter\n",
+    "import itertools\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -46,35 +50,43 @@
    },
    "outputs": [],
    "source": [
-    "#! head -n 1000 train.csv > traintrim.csv"
+    "#! head -n 10000000 train.csv > traintrim.csv\n",
+    "#! head -n 10000000 train.txt > traintrim.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! head -n 1000 test.csv > testtrim.csv"
+    "#! head -n 10000000 test.csv > testtrim.csv\n",
+    "#! head -n 10000000 test.txt > testtrim.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocess = False"
+    "preprocess = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode_column(col):\n",
     "    encoder = preprocessing.LabelEncoder()\n",
+    "    #small_vals = train.groupby(col).count()[0].where(lambda x: x <= 1).dropna().apply(lambda x: '1').to_dict()\n",
+    "    #train.iloc[:,col] = train.iloc[:,col].apply(lambda x : small_vals.get(x,x))\n",
+    "    set_ = train.loc[:, col].values\n",
+    "    c = Counter(set_)\n",
+    "    small_vals = dict(zip(list(dict(filter(lambda x: x[1] <= 3, c.most_common())).keys()), itertools.repeat('1') ))\n",
+    "    train.iloc[:,col] = train.iloc[:,col].apply(lambda x : small_vals.get(x,x))\n",
     "    encoder.fit(train.loc[:, col].fillna('nan').values)\n",
     "    return encoder\n",
     "def transform_column(col):\n",
@@ -88,20 +100,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Import\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:00,  1.62it/s]\n",
+      "1it [00:00,  1.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transform\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  4%|▍         | 1/26 [00:00<00:02,  8.54it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n",
+      "15\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 12%|█▏        | 3/26 [00:00<00:02,  8.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n",
+      "17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 23%|██▎       | 6/26 [00:00<00:02,  9.54it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "19\n",
+      "20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▍      | 9/26 [00:00<00:01,  9.91it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "22\n",
+      "23\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 46%|████▌     | 12/26 [00:01<00:01,  9.68it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "25\n",
+      "26\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 58%|█████▊    | 15/26 [00:01<00:01,  9.69it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "28\n",
+      "29\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 69%|██████▉   | 18/26 [00:01<00:00,  9.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "31\n",
+      "32\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 77%|███████▋  | 20/26 [00:02<00:00,  9.59it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n",
+      "34\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 88%|████████▊ | 23/26 [00:02<00:00,  9.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n",
+      "36\n",
+      "37\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [00:02<00:00,  9.64it/s]\n",
+      "  0%|          | 0/26 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38\n",
+      "39\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [00:02<00:00, 10.30it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 49.92it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 42.61it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 37.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filna\n",
+      "Export\n"
+     ]
+    }
+   ],
    "source": [
     "if preprocess: \n",
     "    print('Import')\n",
-    "    train_gen = pd.read_csv(\"train.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    train_gen = pd.read_csv(\"traintrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
     "    test_gen = pd.read_csv(\"test.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    test = pd.concat([chunk for chunk in tqdm(test_gen)])\n",
     "    print('Transform')\n",
     "    from sklearn import preprocessing\n",
     "    pool = Pool()\n",
-    "    encoders = pool.map(encode_column, tqdm(range(14,40)))\n",
+    "    #encoders = pool.map(encode_column, tqdm(range(14,40)))\n",
+    "    encoders = list(map(encode_column, tqdm(range(14,40))))\n",
     "    #transformed_cols = pool.map(transform_column, tqdm(range(14,40)))\n",
     "    transformed_cols = list(map(transform_column, tqdm(range(14,40))))\n",
     "    for col in tqdm(range(14,40)):\n",
@@ -115,7 +334,7 @@
     "    test = test.fillna(0)#.loc[:,list(range(13))].values\n",
     "    print('Export')\n",
     "    \n",
-    "    train.to_csv('train.csv', index=None, header=False)\n",
+    "    train.to_csv('traintrim.csv', index=None, header=False)\n",
     "    test.to_csv('test.csv', index=None, header=False)\n",
     "    \n",
     "    \n",
@@ -135,7 +354,7 @@
     "print(\"Import preprocessed CSV\")\n",
     "train_gen = pd.read_csv(\"traintrim.csv\",  header=None, engine='c', chunksize = 100000)\n",
     "train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
-    "test_gen = pd.read_csv(\"testtrim.csv\", header=None, engine='c', chunksize = 100000)\n",
+    "test_gen = pd.read_csv(\"test.csv\", header=None, engine='c', chunksize = 100000)\n",
     "test = pd.concat([chunk for chunk in tqdm(test_gen)]).values"
    ]
   },
@@ -210,20 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'201903291139'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "now = datetime.datetime.now().strftime(\"%Y%m%d%H%M\")"
    ]
@@ -240,7 +448,13 @@
     "    checkpoint_path, verbose=1, save_weights_only=True,\n",
     "    # Save weights, every 5-epochs.\n",
     "    period=5)\n",
-    "model.save_weights(checkpoint_path.format(epoch=0))\n"
+    "early_cp = keras.callbacks.EarlyStopping(monitor='val_loss',\n",
+    "                              min_delta=0.0100,\n",
+    "                              patience=10,\n",
+    "                              verbose=1, mode='auto')\n",
+    "tboard_cp = keras.callbacks.TensorBoard(log_dir='./Graph/'+now, histogram_freq=0,  \n",
+    "          write_graph=True, write_images=True)\n",
+    "model.save_weights(checkpoint_path.format(epoch=0))"
    ]
   },
   {
@@ -257,7 +471,7 @@
     "                    epochs=200, \n",
     "                    batch_size=512,  verbose=1,\n",
     "                    validation_data=(X_test, y_test),\n",
-    "                    callbacks = [cp_callback])"
+    "                    callbacks = [cp_callback, early_cp, tboard_cp])"
    ]
   },
   {
@@ -331,8 +545,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib as plt\n",
-    "import seaborn as sns\n",
+    "\n",
     "#sns.distplot(model.predict(X_test))"
    ]
   },
