--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -312,7 +312,7 @@
    "source": [
     "if preprocess: \n",
     "    print('Import')\n",
-    "    train_gen = pd.read_csv(\"traintrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    train_gen = pd.read_csv(\"train.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
     "    test_gen = pd.read_csv(\"test.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    test = pd.concat([chunk for chunk in tqdm(test_gen)])\n",
@@ -334,7 +334,7 @@
     "    test = test.fillna(0)#.loc[:,list(range(13))].values\n",
     "    print('Export')\n",
     "    \n",
-    "    train.to_csv('traintrim.csv', index=None, header=False)\n",
+    "    train.to_csv('train.csv', index=None, header=False)\n",
     "    test.to_csv('test.csv', index=None, header=False)\n",
     "    \n",
     "    \n",
@@ -352,7 +352,7 @@
    "outputs": [],
    "source": [
     "print(\"Import preprocessed CSV\")\n",
-    "train_gen = pd.read_csv(\"traintrim.csv\",  header=None, engine='c', chunksize = 100000)\n",
+    "train_gen = pd.read_csv(\"train.csv\",  header=None, engine='c', chunksize = 100000)\n",
     "train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
     "test_gen = pd.read_csv(\"test.csv\", header=None, engine='c', chunksize = 100000)\n",
     "test = pd.concat([chunk for chunk in tqdm(test_gen)]).values"
