restore_best_weights and lower min_delta

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -449,9 +449,9 @@
     "    # Save weights, every 5-epochs.\n",
     "    period=5)\n",
     "early_cp = keras.callbacks.EarlyStopping(monitor='val_loss',\n",
-    "                              min_delta=0.0100,\n",
+    "                              min_delta=0,\n",
     "                              patience=10,\n",
-    "                              verbose=1, mode='auto')\n",
+    "                              verbose=1, mode='auto', restore_best_weights=True)\n",
     "tboard_cp = keras.callbacks.TensorBoard(log_dir='./Graph/'+now, histogram_freq=0,  \n",
     "          write_graph=True, write_images=True)\n",
     "model.save_weights(checkpoint_path.format(epoch=0))"
