--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,6 +10,14 @@
      "output_type": "stream",
      "text": [
       "1.13.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
      ]
     }
    ],
@@ -37,12 +45,18 @@
     "import matplotlib as plt\n",
     "import seaborn as sns\n",
     "from collections import Counter\n",
-    "import itertools\n"
+    "import itertools\n",
+    "from sklearn.utils import class_weight\n",
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "from sklearn import preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -51,63 +65,56 @@
    "outputs": [],
    "source": [
     "#! head -n 10000000 train.csv > traintrim.csv\n",
-    "#! head -n 10000000 train.txt > traintrim.txt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#! head -n 10000 train.txt > traintrim.txt\n",
     "#! head -n 10000000 test.csv > testtrim.csv\n",
-    "#! head -n 10000000 test.txt > testtrim.txt"
+    "#! head -n 10000 test.txt > testtrim.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocess = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def encode_column(col):\n",
+    "def encode_column(col, df):\n",
     "    encoder = preprocessing.LabelEncoder()\n",
     "    #small_vals = train.groupby(col).count()[0].where(lambda x: x <= 1).dropna().apply(lambda x: '1').to_dict()\n",
     "    #train.iloc[:,col] = train.iloc[:,col].apply(lambda x : small_vals.get(x,x))\n",
-    "    set_ = train.loc[:, col].values\n",
+    "    set_ = df.loc[:, col].values\n",
     "    c = Counter(set_)\n",
     "    small_vals = dict(zip(list(dict(filter(lambda x: x[1] <= 3, c.most_common())).keys()), itertools.repeat('1') ))\n",
-    "    train.iloc[:,col] = train.iloc[:,col].apply(lambda x : small_vals.get(x,x))\n",
-    "    encoder.fit(train.loc[:, col].fillna('nan').values)\n",
+    "    df.loc[:,col] = df.loc[:,col].apply(lambda x : small_vals.get(x,x))\n",
+    "    encoder.fit(df.loc[:, col].dropna().values)\n",
     "    return encoder\n",
-    "def transform_column(col):\n",
-    "    encoder = encoders[col-14]\n",
-    "    return encoder.transform(train.loc[:, col].fillna('nan').values)\n",
-    "def encode_test_column(col): \n",
-    "    encoder = encoders[col-13]\n",
+    "def transform_column(col, df):\n",
+    "    encoder = encoders[col]\n",
+    "    return encoder.transform(df.loc[:, col].dropna().values)\n",
+    "def encode_test_column(col, df): \n",
+    "    encoder = encoders[col+1]\n",
     "    dic = dict(zip(encoder.classes_, encoder.transform(encoder.classes_)))\n",
-    "    return test.loc[:, col].fillna('nan').map(dic).fillna(dic.get('nan',0)).values"
+    "    return df.loc[df.loc[:, col].dropna().index, col].map(dic).values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preprocess = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
+      "1it [00:00, 10.54it/s]\n",
+      "1it [00:00, 12.11it/s]"
      ]
     },
     {
@@ -121,14 +128,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:00,  1.62it/s]\n",
-      "1it [00:00,  1.68it/s]"
+      "\n",
+      " 27%|██▋       | 7/26 [00:00<00:00, 64.55it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.8579474999999999 0.8570333333333334\n",
       "Transform\n"
      ]
     },
@@ -136,149 +144,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  4%|▍         | 1/26 [00:00<00:02,  8.54it/s]"
+      "100%|██████████| 26/26 [00:00<00:00, 59.58it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 96.33it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 95.70it/s]\n",
+      "  0%|          | 0/39 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14\n",
-      "15\n"
+      "Learn\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 12%|█▏        | 3/26 [00:00<00:02,  8.90it/s]"
+      "100%|██████████| 39/39 [00:16<00:00,  2.43it/s]\n",
+      "  4%|▍         | 1/24 [00:00<00:03,  7.23it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16\n",
-      "17\n"
+      "Predict\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|██▎       | 6/26 [00:00<00:02,  9.54it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18\n",
-      "19\n",
-      "20\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▍      | 9/26 [00:00<00:01,  9.91it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n",
-      "22\n",
-      "23\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 46%|████▌     | 12/26 [00:01<00:01,  9.68it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n",
-      "25\n",
-      "26\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 58%|█████▊    | 15/26 [00:01<00:01,  9.69it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27\n",
-      "28\n",
-      "29\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 69%|██████▉   | 18/26 [00:01<00:00,  9.56it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "31\n",
-      "32\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 20/26 [00:02<00:00,  9.59it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33\n",
-      "34\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 23/26 [00:02<00:00,  9.58it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35\n",
-      "36\n",
-      "37\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26/26 [00:02<00:00,  9.64it/s]\n",
+      "100%|██████████| 24/24 [00:03<00:00,  6.92it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 172.31it/s]\n",
       "  0%|          | 0/26 [00:00<?, ?it/s]"
      ]
     },
@@ -286,25 +185,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "38\n",
-      "39\n"
+      "0.9766275 0.8570333333333334\n",
+      "Transform\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 26/26 [00:02<00:00, 10.30it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 49.92it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 42.61it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 37.40it/s]\n"
+      "100%|██████████| 26/26 [00:00<00:00, 228.00it/s]\n",
+      "  0%|          | 0/39 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Learn\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 39/39 [00:12<00:00,  3.07it/s]\n",
+      "  3%|▎         | 1/36 [00:00<00:04,  7.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predict\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 36/36 [00:07<00:00,  4.94it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9766275 0.9420717948717948\n",
       "filna\n",
+      "1.0 1.0\n",
       "Export\n"
      ]
     }
@@ -316,27 +244,71 @@
     "    train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
     "    test_gen = pd.read_csv(\"test.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    test = pd.concat([chunk for chunk in tqdm(test_gen)])\n",
+    "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
-    "    from sklearn import preprocessing\n",
-    "    pool = Pool()\n",
-    "    #encoders = pool.map(encode_column, tqdm(range(14,40)))\n",
-    "    encoders = list(map(encode_column, tqdm(range(14,40))))\n",
-    "    #transformed_cols = pool.map(transform_column, tqdm(range(14,40)))\n",
-    "    transformed_cols = list(map(transform_column, tqdm(range(14,40))))\n",
-    "    for col in tqdm(range(14,40)):\n",
-    "        train.loc[:, col] = transformed_cols[col-14]\n",
-    "    #transformed_test_cols = pool.map(encode_test_column, tqdm(range(13,39)))\n",
-    "    transformed_test_cols = list(map(encode_test_column, tqdm(range(13,39))))\n",
+    "    encoders = {x: encode_column(x, train) for x in tqdm(train.loc[:, train.columns > 13].columns)}\n",
+    "    transformed_cols = {x: transform_column(x, train) for x in  tqdm(train.loc[:, train.columns > 13].columns)}\n",
+    "    for col in tqdm(train.loc[:, train.columns > 13].columns):\n",
+    "        train.loc[train.loc[:, col].dropna().index, col] = transformed_cols[col]\n",
+    "    print('Learn')\n",
+    "    predictors = dict()\n",
+    "    not_nan_cols_dict = dict()\n",
+    "    for col in tqdm(train.drop(0,axis=1).columns):\n",
+    "        not_nan_cols = train.drop(0,axis=1).loc[train.loc[:, col].isna()].count()/len(train.loc[train.loc[:, col].isna()]) > .80\n",
+    "        not_nan_cols_dict[col] = list(train.drop(0,axis=1).loc[:,not_nan_cols].columns)\n",
+    "        train_nonan = train.loc[:, np.append(np.array(not_nan_cols_dict[col]), col)].dropna()#.drop(0,axis=1)\n",
+    "        if len(train_nonan.drop(col, axis = 1).values[0]) > 0:\n",
+    "            x_nonan = train_nonan.drop(col, axis = 1).values\n",
+    "            y_nonan = train.loc[train_nonan.index, col].values\n",
+    "            #splitter = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "            #for train_index, test_index in splitter.split(x_nonan, y_nonan):\n",
+    "            #    x_train_nonan, x_test_nonan = x_nonan.loc[train_index].values, x_nonan.loc[test_index].values\n",
+    "            #    y_train_nonan, y_test_nonan = y_nonan.loc[train_index].values, y_nonan.loc[test_index].values\n",
+    "            if col in list(range(14)):\n",
+    "                predictors[col] = RandomForestRegressor(max_depth=5, random_state=0, n_estimators=100, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "            elif col in list(range(14,40)):\n",
+    "                y_nonan=y_nonan.astype('int')\n",
+    "                predictors[col] = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "    print('Predict')\n",
+    "    for col in tqdm(predictors.keys()):\n",
+    "        train.loc[train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().index, col] = predictors[col].predict(train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna())\n",
+    "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
+    "    print('Transform')\n",
+    "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
     "    for col in tqdm(range(13,39)):\n",
-    "        test.loc[:, col] = transformed_test_cols[col-13]\n",
+    "        test.loc[test.loc[:, col].dropna().index, col] = transformed_test_cols[col]\n",
+    "    print('Learn')\n",
+    "    predictors = dict()\n",
+    "    not_nan_cols_dict = dict()\n",
+    "    for col in tqdm(test.columns):\n",
+    "        not_nan_cols = test.loc[test.loc[:, col].isna()].count()/len(test.loc[test.loc[:, col].isna()]) > .80\n",
+    "        not_nan_cols_dict[col] = list(test.loc[:,not_nan_cols].columns)\n",
+    "        test_nonan = test.loc[:, np.append(np.array(not_nan_cols_dict[col]), col)].dropna()#.drop(0,axis=1)\n",
+    "        if len(test_nonan.drop(col, axis = 1).values[0]) > 0:\n",
+    "            x_nonan = test_nonan.drop(col, axis = 1).values\n",
+    "            y_nonan = test.loc[test_nonan.index, col].values\n",
+    "            #splitter = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "            #for train_index, test_index in splitter.split(x_nonan, y_nonan):\n",
+    "            #    x_train_nonan, x_test_nonan = x_nonan.loc[train_index].values, x_nonan.loc[test_index].values\n",
+    "            #    y_train_nonan, y_test_nonan = y_nonan.loc[train_index].values, y_nonan.loc[test_index].values\n",
+    "            if col in list(range(13)):\n",
+    "                predictors[col] = RandomForestRegressor(max_depth=5, random_state=0, n_estimators=100, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "            elif col in list(range(13,40)):\n",
+    "                y_nonan=y_nonan.astype('int')\n",
+    "                predictors[col] = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "    print('Predict')\n",
+    "    for col in tqdm(predictors.keys()):\n",
+    "        test.loc[test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().index, col] = predictors[col].predict(test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna())\n",
+    "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
-    "    train = train.fillna(0)#.loc[:,list(range(14))]\n",
-    "    test = test.fillna(0)#.loc[:,list(range(13))].values\n",
+    "    train = train.fillna(0)\n",
+    "    test = test.fillna(0)\n",
+    "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
+    "\n",
     "    print('Export')\n",
     "    \n",
     "    train.to_csv('train.csv', index=None, header=False)\n",
     "    test.to_csv('test.csv', index=None, header=False)\n",
-    "    \n",
     "    \n",
     "    #with open(\"train.p\",\"wb\") as filehandler:\n",
     "    #    pickle.dump(train, filehandler, protocol=4)\n",
@@ -376,7 +348,7 @@
     "y = train[0]#.values.reshape([-1,1])\n",
     "#enc = OneHotEncoder(sparse=False)\n",
     "#y = enc.fit_transform(y)\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
+    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
     "splitter = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
     "for train_index, test_index in splitter.split(X, y):\n",
     "    X_train, X_test = X.loc[train_index].values, X.loc[test_index].values\n",
@@ -412,19 +384,25 @@
    "source": [
     "model = keras.Sequential([\n",
     "    keras.layers.Flatten(input_shape=(X.shape[1],)),\n",
-    "    keras.layers.Dense(64, activation=tf.nn.relu),\n",
     "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.Dense(16, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
     "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.Dense(8, activation=tf.nn.relu),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
     "    keras.layers.BatchNormalization(),\n",
-    "    keras.layers.Dropout(0.2),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "    keras.layers.BatchNormalization(),\n",
+    "    keras.layers.Dense(256, activation=tf.nn.relu),\n",
+    "    keras.layers.BatchNormalization(),\n",
     "    keras.layers.Dense(1, activation=tf.nn.sigmoid)\n",
     "])\n",
     "\n",
     "model.compile(tf.keras.optimizers.Adam(),\n",
     "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])"
+    "              metrics=['accuracy'])\n"
    ]
   },
   {
@@ -433,6 +411,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "weights = class_weight.compute_class_weight('balanced',\n",
+    "                                            np.unique(y_train),\n",
+    "                                            y_train)\n",
+    "\n",
     "now = datetime.datetime.now().strftime(\"%Y%m%d%H%M\")"
    ]
   },
@@ -449,8 +431,8 @@
     "    # Save weights, every 5-epochs.\n",
     "    period=5)\n",
     "early_cp = keras.callbacks.EarlyStopping(monitor='val_loss',\n",
-    "                              min_delta=0,\n",
-    "                              patience=20,\n",
+    "                              min_delta=0.0001,\n",
+    "                              patience=15,\n",
     "                              verbose=1, mode='auto', restore_best_weights=True)\n",
     "tboard_cp = keras.callbacks.TensorBoard(log_dir='./Graph/'+now, histogram_freq=0,  \n",
     "          write_graph=True, write_images=True)\n",
@@ -471,7 +453,8 @@
     "                    epochs=200, \n",
     "                    batch_size=512,  verbose=1,\n",
     "                    validation_data=(X_test, y_test),\n",
-    "                    callbacks = [cp_callback, early_cp, tboard_cp])"
+    "                    callbacks = [cp_callback, early_cp, tboard_cp],\n",
+    "\t\t    class_weight=weights)"
    ]
   },
   {
@@ -536,7 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "results = model.evaluate(X_test, y_test)"
+    "results = model.evaluate(X_test, y_test)\n"
    ]
   },
   {
@@ -565,7 +548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(test)"
+    "y_pred = model.predict(test)\n"
    ]
   },
   {
