predict line by line

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.13.1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "import pandas as pd\n",
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -72,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,143 +90,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1it [00:00, 10.54it/s]\n",
-      "1it [00:00, 12.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Import\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " 27%|██▋       | 7/26 [00:00<00:00, 64.55it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.8579474999999999 0.8570333333333334\n",
-      "Transform\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26/26 [00:00<00:00, 59.58it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 96.33it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 95.70it/s]\n",
-      "  0%|          | 0/39 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Learn\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 39/39 [00:16<00:00,  2.43it/s]\n",
-      "  4%|▍         | 1/24 [00:00<00:03,  7.23it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predict\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 24/24 [00:03<00:00,  6.92it/s]\n",
-      "100%|██████████| 26/26 [00:00<00:00, 172.31it/s]\n",
-      "  0%|          | 0/26 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9766275 0.8570333333333334\n",
-      "Transform\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 26/26 [00:00<00:00, 228.00it/s]\n",
-      "  0%|          | 0/39 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Learn\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 39/39 [00:12<00:00,  3.07it/s]\n",
-      "  3%|▎         | 1/36 [00:00<00:04,  7.75it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predict\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 36/36 [00:07<00:00,  4.94it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9766275 0.9420717948717948\n",
-      "filna\n",
-      "1.0 1.0\n",
-      "Export\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if preprocess: \n",
     "    print('Import')\n",
-    "    train_gen = pd.read_csv(\"train.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    train_gen = pd.read_csv(\"traintrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
-    "    test_gen = pd.read_csv(\"test.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    test_gen = pd.read_csv(\"testtrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    test = pd.concat([chunk for chunk in tqdm(test_gen)])\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
@@ -269,9 +125,14 @@
     "            elif col in list(range(14,40)):\n",
     "                y_nonan=y_nonan.astype('int')\n",
     "                predictors[col] = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "    with open(\"predictorstrain.p\",\"wb\") as filehandler:\n",
+    "        pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
+    "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
+    "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        train.loc[train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().index, col] = predictors[col].predict(train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna())\n",
+    "        for index, row in tqdm(train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().iterrows()):                      \n",
+    "            train.loc[index, col] = predictors[col].predict(row.values.reshape(1, -1))\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
     "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
@@ -296,7 +157,11 @@
     "            elif col in list(range(13,40)):\n",
     "                y_nonan=y_nonan.astype('int')\n",
     "                predictors[col] = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=0, n_jobs=-1).fit(x_nonan, y_nonan)\n",
+    "    with open(\"predictorstest.p\",\"wb\") as filehandler:\n",
+    "        pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
+    "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
+    "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        test.loc[test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().index, col] = predictors[col].predict(test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna())\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
