--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13.1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import, division, print_function\n",
     "import pandas as pd\n",
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -56,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +106,317 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def chunks(l, n):\n",
+    "    # For item i in a range that is a length of l,\n",
+    "    for i in range(0, len(l), n):\n",
+    "        # Create an index range for l of n items:\n",
+    "        yield l[i:i+n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:00, 15.13it/s]\n",
+      "1it [00:00, 16.38it/s]\n",
+      "  0%|          | 0/26 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Import\n",
+      "0.8579474999999999 0.8570333333333334\n",
+      "Transform\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [00:00<00:00, 115.02it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 160.78it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 293.71it/s]\n",
+      "  0%|          | 0/39 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learn\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 39/39 [00:05<00:00,  6.63it/s]\n",
+      "  0%|          | 0/24 [00:00<?, ?it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.75it/s]\u001b[A\n",
+      "  4%|▍         | 1/24 [00:00<00:02,  7.76it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predict\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1it [00:00,  8.78it/s]\u001b[A\n",
+      "  8%|▊         | 2/24 [00:00<00:02,  7.67it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.69it/s]\u001b[A\n",
+      " 12%|█▎        | 3/24 [00:00<00:02,  7.58it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.74it/s]\u001b[A\n",
+      " 17%|█▋        | 4/24 [00:00<00:02,  7.47it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.09it/s]\u001b[A\n",
+      " 21%|██        | 5/24 [00:00<00:02,  7.51it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.80it/s]\u001b[A\n",
+      " 25%|██▌       | 6/24 [00:00<00:02,  7.50it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.83it/s]\u001b[A\n",
+      " 29%|██▉       | 7/24 [00:00<00:02,  7.53it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.90it/s]\u001b[A\n",
+      " 33%|███▎      | 8/24 [00:01<00:02,  7.56it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.60it/s]\u001b[A\n",
+      " 38%|███▊      | 9/24 [00:01<00:01,  7.55it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.38it/s]\u001b[A\n",
+      " 42%|████▏     | 10/24 [00:01<00:01,  7.58it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.33it/s]\u001b[A\n",
+      " 46%|████▌     | 11/24 [00:01<00:01,  7.53it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.39it/s]\u001b[A\n",
+      " 50%|█████     | 12/24 [00:01<00:01,  7.52it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.93it/s]\u001b[A\n",
+      " 54%|█████▍    | 13/24 [00:01<00:01,  7.54it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.06it/s]\u001b[A\n",
+      " 58%|█████▊    | 14/24 [00:01<00:01,  7.56it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.67it/s]\u001b[A\n",
+      " 62%|██████▎   | 15/24 [00:01<00:01,  7.55it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.87it/s]\u001b[A\n",
+      " 67%|██████▋   | 16/24 [00:02<00:01,  7.57it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.09it/s]\u001b[A\n",
+      " 71%|███████   | 17/24 [00:02<00:00,  7.59it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.38it/s]\u001b[A\n",
+      " 75%|███████▌  | 18/24 [00:02<00:00,  7.56it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.52it/s]\u001b[A\n",
+      " 79%|███████▉  | 19/24 [00:02<00:00,  7.55it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.85it/s]\u001b[A\n",
+      " 83%|████████▎ | 20/24 [00:02<00:00,  7.57it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.10it/s]\u001b[A\n",
+      " 88%|████████▊ | 21/24 [00:02<00:00,  7.49it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.89it/s]\u001b[A\n",
+      " 92%|█████████▏| 22/24 [00:02<00:00,  7.49it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.53it/s]\u001b[A\n",
+      " 96%|█████████▌| 23/24 [00:03<00:00,  7.48it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.38it/s]\u001b[A\n",
+      "100%|██████████| 24/24 [00:03<00:00,  7.22it/s]\n",
+      "100%|██████████| 26/26 [00:00<00:00, 157.62it/s]\n",
+      "  0%|          | 0/26 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9766275 0.8570333333333334\n",
+      "Transform\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 26/26 [00:00<00:00, 193.45it/s]\n",
+      "  3%|▎         | 1/39 [00:00<00:06,  6.30it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learn\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 39/39 [00:06<00:00,  6.28it/s]\n",
+      "  0%|          | 0/36 [00:00<?, ?it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.42it/s]\u001b[A\n",
+      "  3%|▎         | 1/36 [00:00<00:04,  7.58it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predict\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.89it/s]\u001b[A\n",
+      "  6%|▌         | 2/36 [00:00<00:04,  7.59it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.91it/s]\u001b[A\n",
+      "  8%|▊         | 3/36 [00:00<00:04,  7.63it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.99it/s]\u001b[A\n",
+      " 11%|█         | 4/36 [00:00<00:04,  7.68it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.05it/s]\u001b[A\n",
+      " 14%|█▍        | 5/36 [00:00<00:04,  7.70it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.95it/s]\u001b[A\n",
+      " 17%|█▋        | 6/36 [00:00<00:03,  7.76it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.91it/s]\u001b[A\n",
+      " 19%|█▉        | 7/36 [00:00<00:03,  7.76it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.16it/s]\u001b[A\n",
+      " 22%|██▏       | 8/36 [00:01<00:03,  7.81it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.81it/s]\u001b[A\n",
+      " 25%|██▌       | 9/36 [00:01<00:03,  7.79it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.95it/s]\u001b[A\n",
+      " 28%|██▊       | 10/36 [00:01<00:03,  7.78it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.56it/s]\u001b[A\n",
+      " 31%|███       | 11/36 [00:01<00:03,  7.71it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.87it/s]\u001b[A\n",
+      " 33%|███▎      | 12/36 [00:01<00:03,  7.67it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.66it/s]\u001b[A\n",
+      " 36%|███▌      | 13/36 [00:01<00:03,  7.65it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.97it/s]\u001b[A\n",
+      " 39%|███▉      | 14/36 [00:01<00:02,  7.65it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.44it/s]\u001b[A\n",
+      " 42%|████▏     | 15/36 [00:02<00:02,  7.23it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.48it/s]\u001b[A\n",
+      " 44%|████▍     | 16/36 [00:02<00:02,  6.91it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.81it/s]\u001b[A\n",
+      " 47%|████▋     | 17/36 [00:02<00:02,  6.97it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.10it/s]\u001b[A\n",
+      " 50%|█████     | 18/36 [00:02<00:02,  7.02it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  2.33it/s]\u001b[A\n",
+      " 53%|█████▎    | 19/36 [00:03<00:02,  6.32it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.11it/s]\u001b[A\n",
+      " 56%|█████▌    | 20/36 [00:03<00:02,  6.38it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.45it/s]\u001b[A\n",
+      " 58%|█████▊    | 21/36 [00:03<00:02,  6.21it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.49it/s]\u001b[A\n",
+      " 61%|██████    | 22/36 [00:03<00:02,  6.08it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.35it/s]\u001b[A\n",
+      " 64%|██████▍   | 23/36 [00:03<00:02,  5.94it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.32it/s]\u001b[A\n",
+      " 67%|██████▋   | 24/36 [00:04<00:02,  5.82it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  9.12it/s]\u001b[A\n",
+      " 69%|██████▉   | 25/36 [00:04<00:01,  5.89it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.47it/s]\u001b[A\n",
+      " 72%|███████▏  | 26/36 [00:04<00:01,  5.79it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.53it/s]\u001b[A\n",
+      " 75%|███████▌  | 27/36 [00:04<00:01,  5.70it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.48it/s]\u001b[A\n",
+      " 78%|███████▊  | 28/36 [00:04<00:01,  5.74it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.22it/s]\u001b[A\n",
+      " 81%|████████  | 29/36 [00:05<00:01,  5.79it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.84it/s]\u001b[A\n",
+      " 83%|████████▎ | 30/36 [00:05<00:01,  5.84it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.49it/s]\u001b[A\n",
+      " 86%|████████▌ | 31/36 [00:05<00:00,  5.76it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.20it/s]\u001b[A\n",
+      " 89%|████████▉ | 32/36 [00:05<00:00,  5.79it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.68it/s]\u001b[A\n",
+      " 92%|█████████▏| 33/36 [00:05<00:00,  5.83it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.40it/s]\u001b[A\n",
+      " 94%|█████████▍| 34/36 [00:05<00:00,  5.87it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  8.49it/s]\u001b[A\n",
+      " 97%|█████████▋| 35/36 [00:05<00:00,  5.91it/s]\n",
+      "0it [00:00, ?it/s]\u001b[A\n",
+      "1it [00:00,  4.30it/s]\u001b[A\n",
+      "100%|██████████| 36/36 [00:06<00:00,  5.83it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9766275 0.9420717948717948\n",
+      "filna\n",
+      "1.0 1.0\n",
+      "Export\n"
+     ]
+    }
+   ],
    "source": [
     "if preprocess: \n",
     "    print('Import')\n",
@@ -131,8 +455,9 @@
     "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        for index, row in tqdm(train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().iterrows()):                      \n",
-    "            train.loc[index, col] = predictors[col].predict(row.values.reshape(1, -1))\n",
+    "        not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
+    "        for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
+    "            train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
     "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
@@ -161,9 +486,11 @@
     "        pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
-    "        predictors = pickle.load(filehandler)\n",
+    "        predictors = pickle.load(filehandler)            \n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        test.loc[test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna().index, col] = predictors[col].predict(test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna())\n",
+    "        not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
+    "        for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
+    "            test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
     "    train = train.fillna(0)\n",
