--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -145,7 +145,7 @@
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        for index in tqdm(chunks(not_nan_col_lines.index, 10000)):\n",
+    "        for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
     "            train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
@@ -175,11 +175,10 @@
     "        pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
-    "        predictors = pickle.load(filehandler)            \n",
+    "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        for index in tqdm(chunks(not_nan_col_lines.index, 10000)):\n",
-    "            test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
+    "        test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
     "    train = train.fillna(0)\n",
