--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -145,7 +145,7 @@
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
+    "        for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
     "            train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
