chunk processing for cathegorical columns in test

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -178,7 +178,11 @@
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "        if col in list(range(13)):\n",
+    "            test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "        else:\n",
+    "            for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "            test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
     "    train = train.fillna(0)\n",
