--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -145,8 +145,11 @@
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "        for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
-    "            train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
+    "        if col in list(range(14)):\n",
+    "            train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "        else:\n",
+    "            for index in tqdm(chunks(not_nan_col_lines.index, 1000000 if col != 23 else 100000)):\n",
+    "                train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
     "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
@@ -181,7 +184,7 @@
     "        if col in list(range(13)):\n",
     "            test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
     "        else:\n",
-    "            for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "            for index in tqdm(chunks(not_nan_col_lines.index, 1000000 if col != 23 else 100000)):\n",
     "                test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
