--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -160,7 +160,8 @@
     "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        if col not in [38]:\n",
+    "        if col not in [99]:\n",
+    "            print(col)\n",
     "            not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
     "            if col in list(range(14)):\n",
     "                train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
@@ -197,7 +198,8 @@
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        if col not in [16]:\n",
+    "        if col not in [99]:\n",
+    "            print(col)\n",
     "            not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
     "            if col in list(range(13)):\n",
     "                test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
