--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -101,7 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocess = True"
+    "preprocess = True\n",
+    "retrain = False\n",
+    "retraintest = True"
    ]
   },
   {
@@ -142,7 +144,7 @@
     "        not_nan_cols = train.drop(0,axis=1).loc[train.loc[:, col].isna()].count()/len(train.loc[train.loc[:, col].isna()]) > .80\n",
     "        not_nan_cols_dict[col] = list(train.drop(0,axis=1).loc[:,not_nan_cols].columns)\n",
     "        train_nonan = train.loc[:, np.append(np.array(not_nan_cols_dict[col]), col)].dropna()#.drop(0,axis=1)\n",
-    "        if len(train_nonan.drop(col, axis = 1).values[0]) > 0:\n",
+    "        if (len(train_nonan.drop(col, axis = 1).values[0]) > 0) & retrain:\n",
     "            x_nonan = train_nonan.drop(col, axis = 1).values\n",
     "            y_nonan = train.loc[train_nonan.index, col].values\n",
     "            #splitter = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
@@ -161,6 +163,7 @@
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
     "        if col not in [39]:\n",
+    "            print(col)\n",
     "            not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
     "            if col in list(range(14)):\n",
     "                train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
@@ -179,7 +182,7 @@
     "        not_nan_cols = test.loc[test.loc[:, col].isna()].count()/len(test.loc[test.loc[:, col].isna()]) > .80\n",
     "        not_nan_cols_dict[col] = list(test.loc[:,not_nan_cols].columns)\n",
     "        test_nonan = test.loc[:, np.append(np.array(not_nan_cols_dict[col]), col)].dropna()#.drop(0,axis=1)\n",
-    "        if len(test_nonan.drop(col, axis = 1).values[0]) > 0:\n",
+    "        if (len(test_nonan.drop(col, axis = 1).values[0]) > 0) & retraintest:\n",
     "            x_nonan = test_nonan.drop(col, axis = 1).values\n",
     "            y_nonan = test.loc[test_nonan.index, col].values\n",
     "            #splitter = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
