--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -127,9 +127,9 @@
    "source": [
     "if preprocess: \n",
     "    print('Import')\n",
-    "    train_gen = pd.read_csv(\"traintrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    train_gen = pd.read_csv(\"train.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    train = pd.concat([chunk for chunk in tqdm(train_gen)])\n",
-    "    test_gen = pd.read_csv(\"testtrim.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
+    "    test_gen = pd.read_csv(\"test.txt\", sep='\\t', lineterminator='\\n', header=None, engine='c', chunksize = 100000)\n",
     "    test = pd.concat([chunk for chunk in tqdm(test_gen)])\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
