Sadly put a condition on the model saving when no retraining is necessary

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "preprocess = True\n",
-    "retrain = False\n",
+    "retrain = True\n",
     "retraintest = True"
    ]
   },
@@ -156,8 +156,9 @@
     "            elif col in list(range(14,40)):\n",
     "                y_nonan=y_nonan.astype('int')\n",
     "                predictors[col] = RandomForestClassifier(n_estimators=50, max_depth=3, random_state=0, n_jobs=10).fit(x_nonan, y_nonan)\n",
-    "    with open(\"predictorstrain.p\",\"wb\") as filehandler:\n",
-    "        pickle.dump(predictors, filehandler, protocol=4)\n",
+    "    if retrain:\n",
+    "        with open(\"predictorstrain.p\",\"wb\") as filehandler:\n",
+    "            pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
     "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
@@ -194,8 +195,9 @@
     "            elif col in list(range(13,40)):\n",
     "                y_nonan=y_nonan.astype('int')\n",
     "                predictors[col] = RandomForestClassifier(n_estimators=50, max_depth=3, random_state=0, n_jobs=10).fit(x_nonan, y_nonan)\n",
-    "    with open(\"predictorstest.p\",\"wb\") as filehandler:\n",
-    "        pickle.dump(predictors, filehandler, protocol=4)\n",
+    "    if retrain:\n",
+    "        with open(\"predictorstest.p\",\"wb\") as filehandler:\n",
+    "            pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
