ignore big columns, reduce chunksize

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "preprocess = True\n",
-    "retrain = True\n",
+    "retrain = False\n",
     "retraintest = True"
    ]
   },
@@ -163,13 +163,13 @@
     "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        if col not in [39]:\n",
+    "        if col not in [16, 39]:\n",
     "            print(col)\n",
     "            not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
     "            if col in list(range(14)):\n",
     "                train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
     "            else:\n",
-    "                for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "                for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
     "                    train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('Transform')\n",
@@ -208,7 +208,7 @@
     "            if col in list(range(13)):\n",
     "                test.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
     "            else:\n",
-    "                for index in tqdm(chunks(not_nan_col_lines.index, 1000000)):\n",
+    "                for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
     "                    test.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
     "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
     "    print('filna')\n",
