fix boolean condition

--- a/Rec.ipynb
+++ b/Rec.ipynb
@@ -103,6 +103,7 @@
    "source": [
     "preprocess = True\n",
     "retrain = False\n",
+    "repredict = True\n",
     "retraintest = True"
    ]
   },
@@ -160,18 +161,20 @@
     "        with open(\"predictorstrain.p\",\"wb\") as filehandler:\n",
     "            pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
-    "    with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
-    "        predictors = pickle.load(filehandler)\n",
-    "    for col in tqdm(predictors.keys()):\n",
-    "        if col < 16 :\n",
-    "            print(col)\n",
-    "            not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
-    "            if col in list(range(14)):\n",
-    "                train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
-    "            else:\n",
-    "                for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
-    "                    train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
-    "    print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
+    "    if repredict:\n",
+    "        with open(\"predictorstrain.p\",\"rb\") as filehandler:\n",
+    "            predictors = pickle.load(filehandler)\n",
+    "        for col in tqdm(predictors.keys()):\n",
+    "            if col < 16 :\n",
+    "                print(col)\n",
+    "                not_nan_col_lines = train.loc[train.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
+    "                if col in list(range(14)):\n",
+    "                    train.loc[not_nan_col_lines.index, col] = predictors[col].predict(not_nan_col_lines)\n",
+    "                else:\n",
+    "                    for index in tqdm(chunks(not_nan_col_lines.index, 100000)):\n",
+    "                        train.loc[index, col] = predictors[col].predict(not_nan_col_lines.loc[index,:].values)\n",
+    "        print(np.mean((train.count()/len(train)).values), np.mean((test.count()/len(test)).values))\n",
+    "        train.to_csv('train.csv', index=None, header=False)\n",
     "    print('Transform')\n",
     "    transformed_test_cols = {x: encode_test_column(x, test) for x in tqdm(test.loc[:, test.columns > 12].columns)}\n",
     "    for col in tqdm(range(13,39)):\n",
@@ -195,14 +198,14 @@
     "            elif col in list(range(13,40)):\n",
     "                y_nonan=y_nonan.astype('int')\n",
     "                predictors[col] = RandomForestClassifier(n_estimators=50, max_depth=3, random_state=0, n_jobs=10).fit(x_nonan, y_nonan)\n",
-    "    if retrain:\n",
+    "    if retraintest:\n",
     "        with open(\"predictorstest.p\",\"wb\") as filehandler:\n",
     "            pickle.dump(predictors, filehandler, protocol=4)\n",
     "    print('Predict')\n",
     "    with open(\"predictorstest.p\",\"rb\") as filehandler:\n",
     "        predictors = pickle.load(filehandler)\n",
     "    for col in tqdm(predictors.keys()):\n",
-    "        if col not in [15,24,38]:\n",
+    "        if col < 13:\n",
     "            print(col)\n",
     "            not_nan_col_lines = test.loc[test.loc[:,col].isna(), not_nan_cols_dict[col]].dropna()\n",
     "            if col in list(range(13)):\n",
